# traffic-counter

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: code-quality.yaml
scripts/: setup-ubuntu.sh
tests/: test_cli.py
traffic_counter/: camera.py  cli.py  server.py  video.py
traffic_counter/templates/: index.html
