[tool.poetry]
name = "template-cli"
version = "0.1.0"
description = "Basic template for python project"
authors = ["Bryan Culbertson <bryan@urbanfootprint.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "8.0.1"
python-dotenv = "0.19.0"

[tool.poetry.dev-dependencies]
# Lint (versions duplicated in .pre-commit-config.yaml)
flake8 = "3.9.2"
black = "21.7b0"
mypy = "0.910"
isort = "5.9.3"
pre-commit = "2.14.0"

# Test
tox = "3.24.3"
pytest =  "6.2.4"
pytest-runner = "5.3.1"
pytest-cov = "2.12.1"
pytest-mock = "3.6.1"
pytest-xdist = {extras = ["psutil"], version = "2.3.0"}
pytest-randomly = "3.10.1"

[tool.poetry.scripts]
template-cli = "template_cli.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
