[tool.poetry]
name = "traffic-counter"
version = "0.1.0"
description = "Tool for counting traffic"
authors = ["Bryan Culbertson <bryan@urbanfootprint.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "8.0.1"
python-dotenv = "0.19.0"
numpy = "^1.21.2"
pandas = "^1.3.2"
opencv-contrib-python-headless = "^4.5.3"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
Jinja2 = "^3.0.1"
pathy = {version = "0.6.0", extras = ["gcs"]}

[tool.poetry.dev-dependencies]
# Lint (versions duplicated in .pre-commit-config.yaml)
flake8 = "3.9.2"
black = "21.7b0"
mypy = "0.910"
isort = "5.9.3"
pre-commit = "2.14.0"

# Test
tox = "3.25.0"
pytest =  "6.2.5"
pytest-runner = "5.3.1"
pytest-cov = "2.12.1"
pytest-mock = "3.6.1"
pytest-xdist = {extras = ["psutil"], version = "2.3.0"}
pytest-randomly = "3.10.1"

[tool.poetry.scripts]
traffic-counter = "traffic_counter.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
